# minhash-lsh-near-duplicate-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: analysis.ipynb
results/tables/: combined_experiment_results.csv  datasketch_validation.csv  datasketch_validation_summary.csv  experiment_results.csv  final_20_newsgroups_results.csv  final_best_configurations.csv  final_reuters_results.csv  reuters_experiment_results.csv  s_curve_controlled_20_newsgroups.csv  s_curve_controlled_reuters.csv  s_curve_natural_20_newsgroups.csv  s_curve_natural_reuters.csv  s_curve_results.csv  simhash_comparison.csv  simhash_summary.csv  wikipedia_scalability.csv  wikipedia_scalability_raw.csv
scripts/: demo_jaccard.py  demo_lsh.py  demo_minhash.py  demo_shingling.py  generate_dataset_comparison_plots.py  generate_plots.py  generate_s_curve.py  load_data.py  load_reuters.py  load_wikipedia.py  run_experiments.py  run_simhash_experiment.py  run_wikipedia_scalability.py  validate_datasketch.py
src/near_dup/: data.py  evaluation.py  experiments.py  lsh.py  minhash.py  preprocessing.py  sampling.py  simhash.py  similarity.py  validation.py
tests/: test_evaluation.py  test_experiments.py  test_lsh.py  test_minhash.py  test_preprocessing.py  test_sampling.py  test_simhash.py  test_similarity.py  test_validation.py
