[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "near-duplicate-detection"
version = "0.1.0"
description = "Near-duplicate detection using MinHash and LSH"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
